test/parsing/errors/invalidNewForm.chpl
class Foo {}

var a : Foo = new ++Foo();
